miniextendr-macros/tests/ui/trait_impl_nested_unknown_option.stderr
error: unknown #[miniextendr] option on trait impl method; expected one of: `env`, `r6`, `s7`, `s3`, `s4`, `worker`, `main_thread`, `coerce`, `check_interrupt`, `rng`, `unwrap_in_r`, `skip`, `no_shortcut`, `r_name`, `defaults`, `strict`, `lifecycle`, `r_entry`, `r_post_checks`, `r_on_exit`, `match_arg`, `match_arg_several_ok`, `choices`, `choices_several_ok`
  --> tests/ui/trait_impl_nested_unknown_option.rs:15:19
   |
15 |     #[miniextendr(typo_toplevel)]
   |                   ^^^^^^^^^^^^^
